mapbox/css/inicio.css
body {
    margin: 0;
    padding: 0;

    font-family: "Roboto", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
li{
    padding: 5px;
    display: inline;
    text-transform: uppercase;
    font-family: Poppins-Medium;
    font-size: 15px;
    color: #fff;
    line-height: 1.2;
}
select{
    appearance: none;
    -webkit-appearance: none;
    width: 100%;
    font-family: Poppins-Regular;
    font-size: 12px;
    color: #555555;
    padding: 0.675em 6em 0.675em 1em;
    background-color: #fff;
    border: 1px solid #caced1;
    border-radius: 0.25rem;
    cursor: pointer;
}
.welcome_div{
    font-size: 38px;
    border: 0;
    width: 100%;

}
.div_btn{
    margin: 15px;
}
#map {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;

}
.mapboxgl-canvas{
    width: 100%;
    height: 100%;
    position: relative;
}

.sidebar_sub_left{
    margin-top: 65px;
    background-color: rgb(35 55 75 / 90%);
    color: #fff;
    padding: 6px 12px;
    font-family: monospace;
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    width:30%;
}

.sidebar {
    background-color: rgb(35 55 75 / 90%);
    color: #fff;
    padding: 6px 12px;
    font-family: monospace;
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}


.sidebar .div_side_bar{
    width: 20%;
    padding: 2px;
    display: inline-flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.sidebar .div_side_bar .image{
    height: 25px;
    width: 25px;
}

.horizontal {
    display: flex;
    flex-direction: row;
}

.vertical {
    display: none;
    flex-direction: column;
}

.to_front {

    padding: 6px 12px;
    font-family: monospace;
    z-index: 3;
    position: relative;
    top: 40px;
    left: 0;
}

.img_logo{
    width: 100%;
}
.form-div{

    color:  rgb(35 55 75 / 90%);;
}
.formulario {
    height: calc(3.5rem + calc(var(--bs-border-width) * 2));
    min-height: calc(3.5rem + calc(var(--bs-border-width) * 2));
    line-height: 1.25;
    border-radius:  0.5rem;
}
label {
    position: relative;
    top: 0;
    left: 0;
    z-index: 2;
    height: 100%;
    padding: -1rem;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
    font-size: 15px;
    color: #555555;

}


.container {
    position: relative;
    z-index: 1;
    max-width: 300px;
    margin: 0 auto;
}
.container:before, .container:after {
    content: "";
    display: block;
    clear: both;
}
.container .info {
    margin: 50px auto;
    text-align: center;
}
.container .info h1 {
    margin: 0 0 15px;
    padding: 0;
    font-size: 36px;
    font-weight: 300;
    color: #1a1a1a;
}
.container .info span {
    color: #4d4d4d;
    font-size: 12px;
}
.container .info span a {
    color: #000000;
    text-decoration: none;
}
.container .info span .fa {
    color: #EF3B3A;
}
.p_erro{
    font-family: Poppins-Regular;
    font-size: 18px;
    line-height: 1.7;
    color: #974343;
    margin: 0px;
}

.create_point{
    font-family: Poppins-Regular;
    font-size: 18px;
    line-height: 1.7;
    color: #974343;
    margin-top: -20px;
}

.audio{
   width: 100%;
}
audio:hover, audio:focus, audio:active
{
    -webkit-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
    -moz-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
    box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
    -webkit-transform: scale(1.05);
    -moz-transform: scale(1.05);
    transform: scale(1.05);
}
nav li {
    display: inline-block;
    margin: 0 0 0 15px;
}

audio
{
    -webkit-transition:all 0.5s linear;
    -moz-transition:all 0.5s linear;
    -o-transition:all 0.5s linear;
    transition:all 0.5s linear;
    -moz-box-shadow: 2px 2px 4px 0px #006773;
    -webkit-box-shadow:  2px 2px 4px 0px #006773;
    box-shadow: 2px 2px 4px 0px #006773;
    -moz-border-radius:7px 7px 7px 7px ;
    -webkit-border-radius:7px 7px 7px 7px ;
    border-radius:7px 7px 7px 7px ;
}
.title{
    font-size: 20px;
    line-height: 1.7;
    color: #974343;
    margin-top: 65px;
}

.child {
    width: 100%;
    height: 100%;
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
}

.zoom {
    font-family: Poppins-Regular;
    font-size: 16px;

        background: lightgray;
        border-radius: 50%;
        width: 35px;
        height: 35px;
}
.inside_zoom{
    padding: 6px;
    padding-top: 9px;
}

.link_go{
    background-color: rgb(35 55 75 / 90%);
    color: #fff;
    font-family: Poppins-Regular;
    font-size: 14px;
    line-height: 1.7;
    color: #a6a64a;
    text-align: center;
}

h3{
    background-color: rgb(35 55 75 / 90%);
    color: #fff;
    font-family: Poppins-Regular;
    font-size: 19px;
    line-height: 1.7;
    color: #a6a64a;
    text-align: center;
}

